# ComfyUI-MontrealForcedAligner

./: README.md  __init__.py  mfa_audio_to_text.py  node.py  pyproject.toml  requirements.txt  setup.sh
dataset_folder/: test01.lab  test02.lab
example_source_data/: out.json
output_folder/: test01.TextGrid  test02.TextGrid
simple_code/: comfyUI-types.ts  mfa_audio_to_text.py  mfa_extract_timestamps.py
simple_code/types/: torch.ts
