# pyproject.toml
[project]
name = "ComfyUI-MontrealForcedAligner" # Unique identifier for your node. Immutable after creation.
description = ""
version = "0.0.3" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/teddy1565/ComfyUI-MontrealForcedAligner"

[tool.comfy]
PublisherId = "teddy1565" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "MontrealForcedAligner" # Display name for the Custom Node. Can be changed later.
Icon = "" # SVG, PNG, JPG or GIF (MAX. 800x400px)
